hphp/test/zend/good/ext/simplexml/tests/bug24392.php
<?php 
$s = simplexml_load_file(dirname(__FILE__).'/bug24392.xml');
foreach ($s->item as $item) {
	echo $item->title . "\n";
}
?>