hphp/test/zend/bad/ext/soap/tests/interop/Round4/GroupH/r4_groupH_complex_doclit_006w.php
<?php
class SOAPStruct {
    function SOAPStruct($s, $i, $f) {
        $this->varString = $s;
        $this->varInt = $i;
        $this->varFloat = $f;
    }
}
class BaseStruct {
    function BaseStruct($f, $s) {
        $this->structMessage = $f;
        $this->shortMessage = $s;
    }
}
$s1 = new SOAPStruct('arg1',34,325.325);
$s2 = new BaseStruct(new SOAPStruct('arg2',34,325.325),12);
$client = new SoapClient(dirname(__FILE__)."/round4_groupH_complex_doclit.wsdl",array("trace"=>1,"exceptions"=>0));
$client->echoMultipleFaults1(array("whichFault" => 3,
                                   "param1"     => $s1,
                                   "param2"     => $s2));
echo $client->__getlastrequest();
$HTTP_RAW_POST_DATA = $client->__getlastrequest();
include("round4_groupH_complex_doclit.inc");
echo "ok\n";
?>